[fixed] navbar alignments

--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,10 @@ html, body{
   font-size: 16px;
 }
 
+Nav{
+    z-index: 10;
+}
+
 a{
   text-decoration: none;
   color: inherit;
